<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">"Next"</string>
    <string name="prev_button">"Prev"</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <!-- Questions -->
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>
    <string name="question_africa">The source of the Nile River is in Eqypt </string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the World\'s oldest and deepest freshwater lake</string>

<<<<<<< HEAD
=======
<<<<<<< HEAD
>>>>>>> 05f33654f37ce8a7ea27bed1aeb395235a23ee06
    <!-- Messages -->
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is Wrong</string>
    <string name="title_activity_cheat">Cheat</string>

<<<<<<< HEAD
=======
=======
>>>>>>> 41f94498dd72466f665551ebc62879d1effcdee8
>>>>>>> 05f33654f37ce8a7ea27bed1aeb395235a23ee06

</resources>
