<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"/>

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"/>

    </LinearLayout>

<<<<<<< HEAD
=======
<<<<<<< HEAD
>>>>>>> 05f33654f37ce8a7ea27bed1aeb395235a23ee06
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"/>

<<<<<<< HEAD
=======
=======
>>>>>>> 41f94498dd72466f665551ebc62879d1effcdee8
>>>>>>> 05f33654f37ce8a7ea27bed1aeb395235a23ee06
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="@dimen/button_padding"
=======
<<<<<<< HEAD
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="@dimen/button_padding"
=======
            android:drawablePadding="@dimen/button_padding"
            android:drawableLeft="@drawable/arrow_left"
>>>>>>> 41f94498dd72466f665551ebc62879d1effcdee8
>>>>>>> 05f33654f37ce8a7ea27bed1aeb395235a23ee06
            android:text="@string/prev_button"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/button_padding"
            android:drawableRight="@drawable/arrow_right"
            android:text="@string/next_button"/>

    </LinearLayout>

</LinearLayout>
